tests/pass/run/instance_method_parity/main.kira
class Counter {
    let value: I64

    function emit(): I64 {
        return self.value
    }
}

@Main
function main() {
    let counter: Counter = Counter(42)
    print(counter.emit())
    return
}
