tests/fail/semantics/immutable_field_assignment/main.kira
class Counter {
    let value: I64 = 1

    function bump() {
        value = 2;
        return;
    }
}

@Main
function entry() {
    let counter: Counter = Counter();
    counter.bump();
    return;
}
